objects/JBCXM__RelationshipSponsorTrackingHistory__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
        <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ChangedAttribute__c</fullName>
        <label>ChangedAttribute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>company</fullName>
                </value>
                <value>
                    <fullName>location</fullName>
                </value>
                <value>
                    <fullName>title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__ContactValue__c</fullName>
        <label>ContactValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
        <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
        <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__NewValue__c</fullName>
        <label>NewValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__PreviousValue__c</fullName>
        <label>PreviousValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelationshipContact</label>
        <referenceTo>JBCXM__GSRelationshipContacts__c</referenceTo>
        <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
        <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
        <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SponsorTracking__c</fullName>
        <label>SponsorTracking</label>
        <referenceTo>JBCXM__SponsorTracking__c</referenceTo>
        <relationshipLabel>RelationshipSponsorTrackingHistory</relationshipLabel>
        <relationshipName>RelationshipSponsorTrackingHistory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RelationshipSponsorTrackingHistory</label>
    <nameField>
        <label>RelationshipSponsorTrackingHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelationshipSponsorTrackingHistory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>